// Copyright (c) Shubham Mishra. All rights reserved.
// Licensed under the MIT License.

syntax = "proto3";

package proto.rpc;
import "consensus.proto";
import "client.proto";
import "checkpoint.proto";


message ProtoPayload {
    oneof message {
        proto.consensus.ProtoViewChange view_change = 1;
        proto.consensus.ProtoAppendEntries append_entries = 2;
        proto.consensus.ProtoVote vote = 3;
        proto.client.ProtoClientRequest client_request = 4;
        
        //// DEPRECATED ////
        proto.checkpoint.ProtoBackFillRequest backfill_request = 5;   
        proto.checkpoint.ProtoBackFillResponse backfill_response = 6;
        proto.checkpoint.ProtoBackfillNack backfill_nack = 7;
        ////////////////////

        proto.checkpoint.ProtoBackfillQuery backfill_query = 8;

    }
}